<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>ira_laser_tools</name>
  <version>1.0.4</version>
  <description>The ira_laser_tools package. These nodes are meant to provide some utils for lasers, like listen to different laser scan sources and merge them in a single scan or generate virtual laser scans from a pointcloud.</description>
  <maintainer email="augusto.ballardini@unimib.it">Augusto</maintainer>
  <maintainer email="p.colombo45@campus.unimib.it">Pietro</maintainer>
  <license>BSD</license>
  <url>http://www.ros.org/wiki/ira_laser_tools</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>libvtk-qt</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>libpcl-all-dev</exec_depend>
  <!-- <exec_depend>pcl_ros</exec_depend> -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>libvtk-qt</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
